syntax = "proto3";

package mdb.pillarsecerts.v1;

option go_package = "a.yandex-team.ru/cloud/mdb/mdb-pillar-secrets/proto/mdb/pillarsecrets/v1;pillarsecrets";

service PillarSecretService {
    rpc GetPillarSecret (GetPillarSecretRequest) returns (GetPillarSecretResponse);
}

message GetPillarSecretRequest {

    message PathSpec {
        repeated string Keys = 1;
    }

    string TargetClusterID = 1;
    PathSpec Path = 2;

    oneof SourcePillar {
        string ClusterID = 3;
        string SubClusterID = 4;
        string ShardID = 5;
        string FQDN = 6;
    }
}


message GetPillarSecretResponse {
    string Value = 1;
}
