syntax = "proto3";

package NUgc.NSchema.NBell;

import "kernel/ugc/proto/bell/message.proto";
import "google/protobuf/timestamp.proto";

message TBlock {
    // key
    string Id = 1 [json_name = "id"];

    // fields
    string Type = 2 [json_name = "type"];
    uint32 Count = 3 [json_name = "count"];
    google.protobuf.Timestamp CreateTime = 4 [json_name = "ctime"];
    google.protobuf.Timestamp ModifyTime = 5 [json_name = "mtime"];
    string Meta = 6 [json_name = "meta"];
    string Actors = 7 [json_name = "actors"];
    string GroupKey = 8 [json_name = "group_key"];
    string SubscriptionKey = 9 [json_name = "subscription_key"];
    bool IsRead = 10 [json_name = "is_read"];
    string CounterUniques = 11 [json_name = "counter_uniques"];
    bool Important = 23 [json_name = "important"];

    string Action = 12 [json_name = "action"];
    string Actor = 13 [json_name = "actor"];
    string Preview = 14 [json_name = "preview"];

    map<string, TMessage> Title = 24 [json_name = "title"];
    map<string, TMessage> Body = 15 [json_name = "message"];

    string TransitId = 16 [json_name = "transit_id"];
    uint32 ShowCount = 17 [json_name = "show_count"];
    bool IsNew = 18 [json_name = "is_new"];
    google.protobuf.Timestamp ResetTime = 19 [json_name = "rtime"];
    string TTL = 20 [json_name = "ttl"];
    string TTS = 21 [json_name = "tts"];
    // This block read state is not reflected in ticker.
    // This is internal field.
    bool ExcludedFromTicker = 22 [json_name = "__excluded_from_ticker"];
}
